Safari page collaps fixed, safari doesn't know class row

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -472,3 +472,7 @@ input[type="checkbox"]#vermout:checked, ~ .filter__control.filter__button[for="v
     margin-left: -5vw;
     /*float: left;*/
 }
+
+.row3:before, .row3:after{
+    display: inline-block !important;
+}
